--- a/src/App.css
+++ b/src/App.css
@@ -30,5 +30,11 @@
 
 body{
   background-color: #f6edce;
+  background: linear-gradient(45deg, rgba(244,225,161,1) 0%, rgb(253, 249, 228) 100%) !important;
   overflow: hidden;
+  height: 100vh;
+}
+
+.shadow{
+  box-shadow: 0px 10px 15px 0px #00000017;
 }
