--- a/src/components/imagens/imagens.css
+++ b/src/components/imagens/imagens.css
@@ -1,13 +1,15 @@
 .scroller {
     display: flex;
     flex-direction: column;
-    max-height: 740px;
+    height: calc(100vh - 250px);
     overflow-y: scroll;
+    width: 100vw;
 }
 
 .scroller-header {
     display: flex;
     justify-content: flex-start;
+    height: 70px !important;
     margin-bottom: 10px;
     margin-top: 10px;
 }
@@ -17,7 +19,7 @@
     border-radius: 5px;
     border: none;
     font-weight: 700;
-    background-color: #f6edce;
+    background-color: #ffffff00;
     color: black;
     font-size: 16px;
     cursor: pointer;
@@ -37,23 +39,22 @@
 
 .scroller li {
     display: inline-block;
-    margin-right: 20px;
     text-align: center;
 }
 
 .scroller img {
-    border: 1px solid black;
-    max-width: 100%;
+    border-radius: 5px;
+    width: calc(100vw - 50px);
+    object-fit: cover;
     background-color: white;
+    margin-bottom: 20px;
     /* filter: brightness(0) invert(1) grayscale(1) brightness(1.5); */
 }
 
 .scroller p {
-    font-size: 16px;
+    font-size: 21px;
     font-weight: bold;
-    margin-top: -3px;
-    margin-bottom: 25px;
+    margin-bottom: 2px;
     text-align: center;
-    background-color: white;
     /* padding: 5px; */
 }
