--- a/src/pages/perguntas.css
+++ b/src/pages/perguntas.css
@@ -14,6 +14,7 @@
     margin-left: 10px;
     margin-right: 10px;
     font-size: 22px;
+    word-wrap: break-word;
 
 }
 
@@ -51,6 +52,23 @@
     margin-left: 10px;
     margin-right: 10px;
     font-size: 22px;
+    word-wrap: break-word;
+
+}
+
+.balao-responder{
+    box-sizing: border-box;
+    border-radius: 30px;
+    padding: 15px;
+    background-color: rgb(255, 255, 255);
+    vertical-align: top;
+    width: calc(180px);
+    margin-left: 10px;
+    margin-right: 30px;
+    font-size: 22px;
+    float: right;
+    text-align: center;
+    word-wrap: break-word;
 
 }
 
